--- a/src/h2url/CMakeLists.txt
+++ b/src/h2url/CMakeLists.txt
@@ -3,7 +3,7 @@
 # All Rights Reserved
 #
 #   Author: Reed P Morrison
-#   Date:   02/07/2014
+#   Date:   04/08/2017
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
@@ -18,45 +18,58 @@
 #   limitations under the License.
 #
 # ------------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Project setup
+# ------------------------------------------------------------------------------
 project(hurl)
-cmake_minimum_required(VERSION 2.6.0)
+cmake_minimum_required(VERSION 2.8.0)
 if (POLICY CMP0050)
     cmake_policy(SET CMP0050 OLD)
 endif()
-LIST(APPEND INST_HDRS ${HDRS})
+# ------------------------------------------------------------------------------
+# sources
+# ------------------------------------------------------------------------------
+# include paths
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/ext
     ${CMAKE_SOURCE_DIR}/src/core
+    ${CMAKE_SOURCE_DIR}/ext/nghttp2/include
 )
-SET(SRCS hurl.cc tinymt64.cc)
+SET(SRCS h2url.cc)
 SET(HDRS)
 # ------------------------------------------------------------------------------
 # Man page...
 # ------------------------------------------------------------------------------
-ADD_CUSTOM_TARGET(hurl_man ALL)
+ADD_CUSTOM_TARGET(h2url_man ALL)
 ADD_CUSTOM_COMMAND(
-  TARGET hurl_man
-  SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/hurl.pod
-  COMMAND pod2man ARGS -r "VDMS" -s 1 -c "hurl manual" ${CMAKE_CURRENT_SOURCE_DIR}/hurl.pod ${CMAKE_CURRENT_BINARY_DIR}/hurl.1
-  OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/hurl.1
+  TARGET h2url_man
+  SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/h2url.pod
+  COMMAND pod2man ARGS -r "VDMS" -s 1 -c "h2url manual" ${CMAKE_CURRENT_SOURCE_DIR}/h2url.pod ${CMAKE_CURRENT_BINARY_DIR}/h2url.1
+  OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/h2url.1
 )
 ADD_CUSTOM_COMMAND(
-  TARGET hurl_man
-  SOURCE hurl_man
-  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/hurl.1
+  TARGET h2url_man
+  SOURCE h2url_man
+  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/h2url.1
 )
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/hurl.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
+INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/h2url.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
 # ------------------------------------------------------------------------------
 # build and install
 # ------------------------------------------------------------------------------
-add_executable(hurl_cmd ${HDRS} ${SRCS})
-add_dependencies(hurl_cmd hurlcore)
-SET_TARGET_PROPERTIES(hurl_cmd PROPERTIES OUTPUT_NAME "hurl")
-target_link_libraries(hurl_cmd ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
-install(TARGETS hurl_cmd
+add_executable(h2url_cmd ${HDRS} ${SRCS})
+add_dependencies(h2url_cmd hurlcore)
+add_dependencies(h2url_cmd nghttp2)
+SET_TARGET_PROPERTIES(h2url_cmd
+  PROPERTIES OUTPUT_NAME "h2url"
+)
+target_link_libraries(h2url_cmd
+  ${CMAKE_BINARY_DIR}/src/core/libhurl.a
+  ${CMAKE_BINARY_DIR}/ext/nghttp2/src/libnghttp2.a
+  ${LIBRARIES}
+)
+install(TARGETS
+  h2url_cmd
   DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/
   COMPONENT Executables
 )
