--- a/src/phurl/CMakeLists.txt
+++ b/src/phurl/CMakeLists.txt
@@ -18,44 +18,21 @@
 #   limitations under the License.
 #
 # ------------------------------------------------------------------------------
-
 # Project setup
 project(phurl)
 cmake_minimum_required(VERSION 2.6.0)
-
 if (POLICY CMP0050)
     cmake_policy(SET CMP0050 OLD)
 endif()
-
-# header files to install
 LIST(APPEND INST_HDRS ${HDRS})
-
-# include paths
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
-    #${CMAKE_CURRENT_BINARY_DIR}
-    ../../include
-    ../../ext
-    ../core/
-    ../core/dns
-    ../core/support
-    ../core/evr
-    ../core/nconn
-    ../core/http
-    ../core/ndebug
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/ext
+    ${CMAKE_SOURCE_DIR}/src/core
 )
-
-#add_definitions(-std=c++0x)
-
-# Source files
-SET(SRCS
-  phurl.cc
-)
-
-# Headers
-SET(HDRS
-)
-
+SET(SRCS phurl.cc)
+SET(HDRS)
 # ------------------------------------------------------------------------------
 # Man page...
 # ------------------------------------------------------------------------------
@@ -72,7 +49,6 @@ ADD_CUSTOM_COMMAND(
   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/phurl.1
 )
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/phurl.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
-
 # ------------------------------------------------------------------------------
 # build and install
 # ------------------------------------------------------------------------------
@@ -80,8 +56,7 @@ add_executable(phurl_cmd ${HDRS} ${SRCS})
 add_dependencies(phurl_cmd hurlcore)
 SET_TARGET_PROPERTIES(phurl_cmd PROPERTIES OUTPUT_NAME "phurl")
 target_link_libraries(phurl_cmd ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
-
 install(TARGETS phurl_cmd
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/
-        COMPONENT Executables
-        )
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/
+  COMPONENT Executables
+)
