--- a/tests/whitebox/nconn/CMakeLists.txt
+++ b/tests/whitebox/nconn/CMakeLists.txt
@@ -36,7 +36,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ../../../src/core/nconn/
                     ../../../src/core/ndebug/)
 add_executable(wb_nconn_tcp ${HDRS} ${SRCS})
-target_link_libraries(wb_nconn_tcp compiled_catch ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
+target_link_libraries(wb_nconn_tcp compiled_catch ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a ${LIBRARIES})
 SET_TARGET_PROPERTIES(wb_nconn_tcp PROPERTIES OUTPUT_NAME "wb_nconn_tcp")
 add_test(nconn_tcp wb_nconn_tcp)
 
@@ -54,6 +54,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ../../../src/core/nconn/
                     ../../../src/core/ndebug/)
 add_executable(wb_nconn_tls ${HDRS} ${SRCS})
-target_link_libraries(wb_nconn_tls compiled_catch ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
+target_link_libraries(wb_nconn_tls compiled_catch ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a ${LIBRARIES})
 SET_TARGET_PROPERTIES(wb_nconn_tls PROPERTIES OUTPUT_NAME "wb_nconn_tls")
 add_test(nconn_tls wb_nconn_tls)
