--- a/tests/whitebox/support/CMakeLists.txt
+++ b/tests/whitebox/support/CMakeLists.txt
@@ -32,7 +32,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ../../../include/
                     ../../../src/core/ndebug/)
 add_executable(wb_nbq ${HDRS} ${SRCS})
-target_link_libraries(wb_nbq compiled_catch  ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
+target_link_libraries(wb_nbq compiled_catch  ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a ${LIBRARIES})
 SET_TARGET_PROPERTIES(wb_nbq PROPERTIES OUTPUT_NAME "wb_nbq")
 add_test(nbq wb_nbq)
 
@@ -46,7 +46,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ../../../src/core/support/
                     ../../../src/core/ndebug/)
 add_executable(wb_obj_pool ${HDRS} ${SRCS})
-target_link_libraries(wb_obj_pool compiled_catch  ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
+target_link_libraries(wb_obj_pool compiled_catch  ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a ${LIBRARIES})
 SET_TARGET_PROPERTIES(wb_obj_pool PROPERTIES OUTPUT_NAME "wb_obj_pool")
 add_test(obj_pool wb_obj_pool)
 
@@ -59,6 +59,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ../../../src/core/support/
                     ../../../src/core/ndebug/)
 add_executable(wb_nlru ${HDRS} ${SRCS})
-target_link_libraries(wb_nlru compiled_catch  ${CMAKE_BINARY_DIR}/src/core/libhurl.a ${LIBRARIES})
+target_link_libraries(wb_nlru compiled_catch  ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a ${LIBRARIES})
 SET_TARGET_PROPERTIES(wb_nlru PROPERTIES OUTPUT_NAME "wb_nlru")
 add_test(nlru wb_nlru)
