Adding h2 support courtesey of nghttp2.

--- a/src/hurl/CMakeLists.txt
+++ b/src/hurl/CMakeLists.txt
@@ -18,19 +18,28 @@
 #   limitations under the License.
 #
 # ------------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Project setup
+# ------------------------------------------------------------------------------
 project(hurl)
 cmake_minimum_required(VERSION 2.6.0)
 if (POLICY CMP0050)
     cmake_policy(SET CMP0050 OLD)
 endif()
+# ------------------------------------------------------------------------------
+# include paths
+# ------------------------------------------------------------------------------
 LIST(APPEND INST_HDRS ${HDRS})
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/ext
     ${CMAKE_SOURCE_DIR}/src/core
+    ${CMAKE_SOURCE_DIR}/ext/nghttp2/include
 )
+# ------------------------------------------------------------------------------
+# sources
+# ------------------------------------------------------------------------------
 SET(SRCS hurl.cc tinymt64.cc)
 SET(HDRS)
 # ------------------------------------------------------------------------------
@@ -56,6 +65,7 @@ add_executable(hurl_cmd ${HDRS} ${SRCS})
 add_dependencies(hurl_cmd hurlcore)
 SET_TARGET_PROPERTIES(hurl_cmd PROPERTIES OUTPUT_NAME "hurl")
 target_link_libraries(hurl_cmd
+  ${CMAKE_BINARY_DIR}/ext/nghttp2/src/libnghttp2.a
   ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a
   ${CMAKE_SOURCE_DIR}/ext/udns-0.4/libudns.a
   ${LIBRARIES}
