--- a/src/phurl/CMakeLists.txt
+++ b/src/phurl/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/ext
     ${CMAKE_SOURCE_DIR}/src/core
+    ${CMAKE_SOURCE_DIR}/ext/nghttp2/include
 )
 SET(SRCS phurl.cc)
 SET(HDRS)
@@ -56,6 +57,7 @@ add_executable(phurl_cmd ${HDRS} ${SRCS})
 add_dependencies(phurl_cmd hurlcore)
 SET_TARGET_PROPERTIES(phurl_cmd PROPERTIES OUTPUT_NAME "phurl")
 target_link_libraries(phurl_cmd
+  ${CMAKE_BINARY_DIR}/ext/nghttp2/src/libnghttp2.a
   ${CMAKE_BINARY_DIR}/src/core/libhurlcore.a
   ${CMAKE_SOURCE_DIR}/ext/udns-0.4/libudns.a
   ${LIBRARIES}
